fix(popup-menu): align class structure with diagram-js@10
This reverts the following structure:

```
.djs-popup.mycustomClass
  .djs-popup-overlay <--- actual popup
    ...
```

to the diagram-js@10.0.0:

```
.djs-popup-backdrop
  .djs-popup.mycustomClass <--- actual popup
    ...
```

The previously introduced change adds unnecessary friction when upgrading.

--- a/assets/diagram-js.css
+++ b/assets/diagram-js.css
@@ -514,7 +514,7 @@ marker.djs-dragger tspan {
 /**
  * popup styles
  */
-.djs-popup {
+.djs-popup-backdrop {
   position: fixed;
   width: 100vw;
   height: 100vh;
@@ -527,7 +527,7 @@ marker.djs-dragger tspan {
   border-radius: 2px;
 }
 
-.djs-popup-overlay {
+.djs-popup {
   width: min-content;
   background: var(--popup-background-color);
   overflow: hidden;
